# llm-connector

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md
.github/workflows/: cmake.yml
doc/html/: index.html  md_CODE_OF_CONDUCT.html  md_CONTRIBUTING.html  md_README.html  md_SECURITY.html  pages.html
doc/html/search/: all_3.js  pages_1.js  pages_2.js  searchdata.js
doc/latex/: md_README.tex  refman.tex
include/: llm_connector.h
src/: .gitignore  llm_connector.cpp
